[gd_scene load_steps=4 format=3 uid="uid://5oiswe7afd2p"]

[ext_resource type="Script" uid="uid://ytulwglatf22" path="res://scripts/gui/PauseMenu.gd" id="1_1eo1i"]
[ext_resource type="Texture2D" uid="uid://cl1m14s35ar8d" path="res://assets/sprites/ui/artdecoUI_PIPO_wb.png" id="1_dfg7a"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1eo1i"]
texture = ExtResource("1_dfg7a")
texture_margin_left = 48.0
texture_margin_top = 48.0
texture_margin_right = 48.0
texture_margin_bottom = 48.0
region_rect = Rect2(680, 50, 245, 185)

[node name="pause_menu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1eo1i")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0.501961)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
z_index = 500
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -207.0
offset_right = 308.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_1eo1i")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 36
text = "Pause"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 18
text = "Resume
"

[node name="Options" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 18
text = "Options"

[node name="Quit" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 18
text = "Quit
"

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
